<?xml version="1.0"?>
<package format="2">
  <name>rtr_moveit</name>
  <version>0.0.0</version>
  <description>A MoveIt! planner plugin for Realtime Robotics RapidPlan.</description>

  <maintainer email="henningkayser@picknik.ai">Henning Kayser</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>pluginlib</build_depend>

  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>pluginlib</exec_depend>


  <build_export_depend>moveit_core</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>



  <export>
    <moveit_core plugin="${prefix}/rtr_interface_plugin_description.xml"/>
  </export>
</package>
