<?xml version="1.0"?>
<package format="2">
  <name>rtr_core_stub</name>
  <version>0.0.1</version>
  <description>Stub implementations of the Realtime Robotics RapidPlan interfaces.</description>

  <maintainer email="henningkayser@picknik.ai">Henning Kayser</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>eigen</build_depend>
  <build_depend>pcl_ros</build_depend>

  <exec_depend>eigen</exec_depend>
  <exec_depend>pcl_ros</exec_depend>

  <export>
  </export>
</package>
